--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 body {
     background: #FFD9E1;
-    font-family: 'Montserrat';
+    font-family: 'Poppins';
     min-height: 100vh;
     position: relative;
     overflow: hidden;
