--- a/src/App.css
+++ b/src/App.css
@@ -14,10 +14,13 @@
   text-align: center;
 }
 
+h2, h1 {
+  font-weight: 500;
+}
+
 @media (min-width:1024px) {
   h2, h1 {
       font-size: 50px;
-      font-weight: 500;
   }
   .container {
       padding: 0 3rem;
