--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 
 body {
-    background: #FFD9E1;
+    background: #ececec;
     font-family: 'Poppins';
     min-height: 100vh;
     position: relative;
